--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,6 @@
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,visualstudiocode
+.vscode/launch.json
+.vscode/settings.json
+.vscode/tasks.json
