Added output binary to the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+sim
 # Created by https://www.toptal.com/developers/gitignore/api/c++,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,visualstudiocode
 
